--- a/_vti_cnf/index.htm
+++ b/_vti_cnf/index.htm
@@ -1,18 +1,18 @@
 vti_encoding:SR|utf8-nl
-vti_timelastmodified:TR|06 Sep 2022 23:34:33 -0000
+vti_timelastmodified:TR|07 Sep 2022 00:26:53 -0000
 vti_title:SR|runnay website
 vti_author:SR|DESKTOP-I9IF6H1\\Luna
 vti_modifiedby:SR|DESKTOP-I9IF6H1\\Luna
-vti_nexttolasttimemodified:TR|06 Sep 2022 23:34:33 -0000
-vti_timecreated:TR|06 Sep 2022 23:59:25 -0000
+vti_nexttolasttimemodified:TR|07 Sep 2022 00:26:53 -0000
+vti_timecreated:TR|07 Sep 2022 00:27:02 -0000
 vti_extenderversion:SR|6.0.2.5516
-vti_syncwith_localhost\\c\:\\users\\luna\\documents\\my web sites/c\:/users/luna/documents/my web sites:TR|06 Sep 2022 23:34:33 -0000
-vti_cacheddtm:TX|06 Sep 2022 23:59:25 -0000
-vti_filesize:IR|538
+vti_syncwith_localhost\\c\:\\users\\luna\\documents\\my web sites/c\:/users/luna/documents/my web sites:TR|07 Sep 2022 00:26:53 -0000
+vti_cacheddtm:TX|07 Sep 2022 00:27:02 -0000
+vti_filesize:IR|734
 vti_cachedtitle:SR|runnay website
-vti_cachedbodystyle:SR|<body background="funny_fisheye_dogs-t3.jpg">
-vti_cachedlinkinfo:VX|S|funny_fisheye_dogs-t3.jpg
-vti_cachedsvcrellinks:VX|FSUS|funny_fisheye_dogs-t3.jpg
+vti_cachedbodystyle:SR|<body bgcolor="#E7E7CF">
+vti_cachedlinkinfo:VX|S|underconstruction_animated_languages.gif
+vti_cachedsvcrellinks:VX|FSUS|underconstruction_animated_languages.gif
 vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
