--- a/index.htm
+++ b/index.htm
@@ -8,13 +8,18 @@
 <title>runnay website</title>
 </head>
 
-<body background="funny_fisheye_dogs-t3.jpg">
+<body bgcolor="#E7E7CF">
 
-<h2 align="center"><font size="7">runnay website</font></h2>
-<p align="center">OIOIOIOO</p>
-<hr>
 <p align="center">&nbsp;</p>
-<div align="center">
-&nbsp;</div>
+<p align="center">&nbsp;</p>
+<p align="center">&nbsp;</p>
+<p align="center">&nbsp;</p>
+<p align="center">&nbsp;</p>
+<p align="center">&nbsp;</p>
+<p align="center">&nbsp;</p>
+<p align="center">&nbsp;</p>
+<p align="center">&nbsp;</p>
+<p align="center">
+<img border="0" src="underconstruction_animated_languages.gif" width="390" height="88"></p>
 
 </body></html>
